--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "dripsy": "^3.6.0",
+    "eslint": "^8.19.0",
     "expo-linking": "^3.0.0",
     "moti": "canary",
-    "solito": "latest"
+    "prettier": "^2.7.1",
+    "solito": "latest",
+    "typescript": "^4.7.4"
   },
   "sideEffects": false
 }
