--- a/apps/next/.babelrc.json
+++ b/apps/next/.babelrc.json
@@ -1,12 +1,10 @@
 {
-  "presets": [
-    "next/babel",
-    ["babel-preset-expo", { "jsxRuntime": "automatic" }]
-  ],
+  "presets": ["next/babel", ["babel-preset-expo", {"jsxRuntime": "automatic"}]],
   "plugins": [
-    ["@babel/plugin-proposal-class-properties", { "loose": true }],
-    ["@babel/plugin-proposal-private-methods", { "loose": true }],
-    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }],
-    "react-native-reanimated/plugin"
+    ["@babel/plugin-proposal-class-properties", {"loose": true}],
+    ["@babel/plugin-proposal-private-methods", {"loose": true}],
+    ["@babel/plugin-proposal-private-property-in-object", {"loose": true}],
+    "react-native-reanimated/plugin",
+    "react-native-paper/babel"
   ]
 }
