drawer added on mobile

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,6 +3,7 @@
   "name": "app",
   "main": "index.ts",
   "dependencies": {
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
