eslint and typecheck adjustments

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -4,29 +4,18 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
+    "incremental": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "downlevelIteration": true,
     "jsx": "preserve",
-    "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@app/*": ["../../packages/app/*"],
-      "@next/*": ["./*"]
+      "@app/*": ["./*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "app-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "../../packages/app/*"
-  ],
+  "include": ["./**/*.ts", "./**/*.tsx"],
   "exclude": ["node_modules"]
 }
