--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,18 +15,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/preset-react": "^7.18.6"
   },
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "typecheck": "tsc -b"
   },
   "main": "index.js",
   "version": "1.0.0",
   "private": true,
-  "name": "expo-app"
+  "name": "@apka/expo"
 }
