--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../tsconfig"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@app/*": ["../../packages/app/*"],
+      "@expo/*": ["./*"]
+    }
+  }
 }
