--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "next-app",
+  "name": "@apka/next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@expo/next-adapter": "^3.1.20",
