--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "solito-blank",
+  "name": "apka",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ]
+  },
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.67.2",
-    "eslint": "^8.11.0",
     "turbo": "^1.1.6",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "jest": "^28.1.3",
+    "@types/jest": "^28.1.6",
+    "typescript-styled-plugin": "^0.18.2",
+    "@types/styled-components": "5.1.6",
+    "@types/styled-components-react-native": "^5.1.1",
+    "@typescript-eslint/parser": "^5.31.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "airbnb": "^0.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.7.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "@react-native-community/eslint-config": "^3.0.3"
   },
   "scripts": {
     "native": "cd apps/expo && expo start",
-    "web": "cd apps/next && yarn next"
+    "web": "cd apps/next && yarn next",
+    "typecheck": "yarn workspaces run typecheck",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx . --max-warnings=0"
   }
 }
