--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,15 +1,17 @@
 {
   "version": "0.0.0",
-  "name": "app",
+  "name": "@apka/app",
   "main": "index.ts",
+  "scripts": {
+    "typecheck": "tsc -b"
+  },
   "dependencies": {
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.3",
     "expo-linking": "^3.0.0",
-    "moti": "canary",
+    "moti": "^0.18.0",
     "prettier": "^2.7.1",
     "react-native-paper": "^4.12.2",
     "react-native-vector-icons": "^9.2.0",
@@ -18,7 +20,7 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@types/styled-components": "^5.1.25",
-    "typescript": "^4.7.4"
+    "@testing-library/react-native": "^11.0.0",
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
