--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "@react-native-community/eslint-config": "^3.0.3",
-    "lint-staged": "^12.3.4"
+    "lint-staged": "^12.3.4",
+    "husky": "^8.0.1"
   },
   "scripts": {
     "native": "cd apps/expo && expo start",
