--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     ]
   },
   "husky": {
-    "pre-commit": ".husky/pre-commit.sh"
+    "hooks": {
+      "pre-commit": ".husky/pre-commit.sh"
+    }
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
