--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,28 +1,37 @@
 {
   "dependencies": {
-    "app": "*",
+    "@apka/app": "*",
+    "@testing-library/jest-native": "^4.0.5",
+    "babel-jest": "^28.1.3",
     "expo": "^44.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
+    "react": "17.0.2",
+    "react-native": "^0.69.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/preset-react": "^7.18.6"
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.10",
+    "@babel/plugin-transform-flow-strip-types": "^7.18.9",
+    "@swc/core": "^1.2.224",
+    "@swc/jest": "^0.2.22",
+    "@testing-library/jest-native": "^4.0.5",
+    "@types/react": "17.0.38",
+    "@types/react-native": "^0.69.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "jest": "27.4.7"
   },
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "test": "jest --passWithNoTest"
   },
   "main": "index.js",
   "version": "1.0.0",
