--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -7,17 +7,36 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@apka/app": "*",
+    "@babel/preset-react": "^7.18.6",
     "@expo/next-adapter": "^3.1.20",
-    "app": "*",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-expo": "^9.2.0",
+    "jest-environment-jsdom": "^29.0.1",
     "next": "12.1.0",
-    "raf": "^3.4.1"
+    "raf": "^3.4.1",
+    "react": "17.0.2",
+    "react-native": "^0.69.3",
+    "react-native-web": "0.17.5",
+    "tsconfig-paths-jest": "^0.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react-native": "^11.0.0",
+    "@types/jest": "^28.1.6",
     "@types/node": "17.0.21",
+    "@types/react": "17.0.38",
+    "babel-core": "^6.26.3",
+    "babel-preset-expo": "^9.2.0",
     "eslint-config-next": "^12.1.0",
+    "jest": "27.4.7",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0"
   }
