--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
       "packages/*"
     ]
   },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.1",
+    "moti": "^0.18.0",
+    "react-native": "^0.69.3",
+    "react-native-web": "^0.18.7"
+  },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "@types/react-native": "^0.67.2",
     "turbo": "^1.1.6",
     "typescript": "^4.6.2",
-    "jest": "^28.1.3",
     "@types/jest": "^28.1.6",
     "typescript-styled-plugin": "^0.18.2",
-    "@types/styled-components": "5.1.6",
-    "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/parser": "^5.31.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "airbnb": "^0.0.2",
@@ -34,12 +36,20 @@
     "eslint-plugin-testing-library": "^5.5.1",
     "@react-native-community/eslint-config": "^3.0.3",
     "lint-staged": "^12.3.4",
-    "husky": "^8.0.1"
+    "husky": "^8.0.1",
+    "@testing-library/react-native": "^11.0.0",
+    "react-test-renderer": "17.0.1",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-gesture-handler": "^2.5.0"
   },
   "scripts": {
     "native": "cd apps/expo && expo start",
     "web": "cd apps/next && yarn next",
     "typecheck": "yarn workspaces run typecheck",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx . --max-warnings=0"
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx . --max-warnings=0",
+    "test": "jest"
+  },
+  "resolutions": {
+    "@types/react": "17.0.38"
   }
 }
