--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,8 @@
 {
-  "version": "0.0.0",
+  "version": "1.0.0",
   "name": "@apka/app",
   "main": "index.ts",
+  "private": true,
   "scripts": {
     "typecheck": "tsc -b"
   },
@@ -11,16 +12,17 @@
     "@react-navigation/native-stack": "^6.5.0",
     "eslint-config-next": "^12.2.3",
     "expo-linking": "^3.0.0",
-    "moti": "^0.18.0",
     "prettier": "^2.7.1",
     "react-native-paper": "^4.12.2",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.2.0",
-    "solito": "latest",
-    "styled-components": "^5.3.5"
+    "solito": "latest"
   },
   "sideEffects": false,
   "devDependencies": {
-    "@testing-library/react-native": "^11.0.0",
+    "@types/react": "17.0.38",
+    "@types/styled-components": "5.1.6",
+    "@types/styled-components-react-native": "^5.1.3",
     "jest-environment-jsdom": "^28.1.3"
   }
 }
