--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -23,7 +23,7 @@
     "@types/react": "17.0.38",
     "@types/react-native": "^0.69.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "jest": "27.4.7"
+    "jest": "^29.0.1"
   },
   "scripts": {
     "start": "expo start --dev-client",
