--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -36,7 +36,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-expo": "^9.2.0",
     "eslint-config-next": "^12.1.0",
-    "jest": "27.4.7",
+    "jest": "^29.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0"
   }
