--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -3,11 +3,11 @@
     "@apka/app": "*",
     "@testing-library/jest-native": "^4.0.5",
     "babel-jest": "^28.1.3",
-    "expo": "^44.0.0",
+    "expo": "^46.0.9",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.2",
-    "react-native": "^0.69.3",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "styled-components": "^5.3.5"
@@ -23,7 +23,8 @@
     "@types/react": "17.0.38",
     "@types/react-native": "^0.69.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "jest": "^29.0.1"
+    "jest": "^29.0.1",
+    "metro-react-native-babel-preset": "^0.72.1"
   },
   "scripts": {
     "start": "expo start --dev-client",
