--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     ]
   },
   "dependencies": {
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-dom": "17.0.1",
     "moti": "^0.18.0",
     "react-native": "^0.69.3",
-    "react-native-web": "^0.18.7"
+    "react-native-web": "^0.18.7",
+    "react-native-reanimated": "~2.3.1"
   },
   "devDependencies": {
     "turbo": "^1.1.6",
@@ -39,7 +40,6 @@
     "husky": "^8.0.1",
     "@testing-library/react-native": "^11.0.0",
     "react-test-renderer": "17.0.1",
-    "react-native-reanimated": "^2.9.1",
     "react-native-gesture-handler": "^2.5.0"
   },
   "scripts": {
