--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "moti": "^0.18.0",
     "react-native": "^0.69.3",
     "react-native-web": "^0.18.7",
-    "react-native-reanimated": "~2.3.1"
+    "react-native-reanimated": "^2.9.1"
   },
   "devDependencies": {
     "turbo": "^1.1.6",
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
+    "jest-environment-jsdom": "^29.0.1",
     "@react-native-community/eslint-config": "^3.0.3",
     "lint-staged": "^12.3.4",
     "husky": "^8.0.1",
