--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -3,14 +3,12 @@
     "@apka/app": "*",
     "@testing-library/jest-native": "^4.0.5",
     "babel-jest": "^28.1.3",
-    "expo": "^46.0.0",
+    "expo": "^46.0.9",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "styled-components": "^5.3.5"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
