--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     ]
   },
   "dependencies": {
-    "react": "17.0.1",
     "react-dom": "17.0.1",
     "moti": "^0.18.0",
-    "react-native": "^0.69.3",
     "react-native-web": "^0.18.7",
-    "react-native-reanimated": "^2.9.1"
+    "react-native-reanimated": "^2.9.1",
+    "react": "18.0.0",
+    "react-native": "0.69.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "turbo": "^1.1.6",
@@ -40,8 +41,11 @@
     "lint-staged": "^12.3.4",
     "husky": "^8.0.1",
     "@testing-library/react-native": "^11.0.0",
-    "react-test-renderer": "17.0.1",
-    "react-native-gesture-handler": "^2.5.0"
+    "react-test-renderer": "18.0.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "jest": "^29.0.1"
   },
   "scripts": {
     "native": "cd apps/expo && expo start",
@@ -51,6 +55,6 @@
     "test": "jest"
   },
   "resolutions": {
-    "@types/react": "17.0.38"
+    "@types/react": "18.0.0"
   }
 }
