--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/styled-components": "5.1.6",
     "@types/styled-components-react-native": "^5.1.3",
-    "jest-environment-jsdom": "^28.1.3"
+    "jest-environment-jsdom": "^28.1.3",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1"
   }
 }
